# subtitle-generator

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__.py
src/subtitle_generator/: __init__.py  app.py  prompts.py
tests/: run_tests.py  test_core_validation.py  test_integration.py
